--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -7,19 +7,19 @@ $primary-light: findLightColor($primary) !default;
 $primary-dark: findDarkColor($primary) !default;
 
 $info: hsl(212,88,51) !default;
+$info-invert: findColorInvert($info) !default;
 
 $link: $primary !default;
-$link-invert: var(--primary-invert) !default;
+$link-invert: $primary-invert !default;
 $link-visited: $grey !default;
-$link-focus-border: var(--primary) !default;
+$link-focus-border: $primary !default;
 
 $label-weight: var(--weight-semibold, #{$weight-semibold}) !default;
 
 $at-root: true !default;
 
 :root {
-    @include registerCSSVarColor(
-        'primary', ($primary, $primary-invert, $primary-light, $primary-dark),
-        'link', ($link, $link-invert)
-    )
+    @include registerCSSVarColor('primary', ($primary, $primary-invert, $primary-light, $primary-dark));
+    @include registerCSSVarColor('info', ($info, $info-invert));
+    @include registerCSSVarColor('link', ($link, $link-invert));
 }
